Major refacorting on some property declaractions, added new get workpanel method to appframe class